<resources>
    <string name="app_name">Aminmart RawBT</string>
    <string name="scan_printer">Scan Printer</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="test_print">Test Print</string>
    <string name="select_printer">Select Printer</string>
    <string name="status_disconnected">Status: Disconnected</string>
    <string name="status_connecting">Status: Connecting...</string>
    <string name="status_connected">Status: Connected</string>
    <string name="stop_service">Stop Service</string>
</resources>
